--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -3,10 +3,10 @@
    use responsibly! */
 /*
 widget text/foreground color */
-@define-color theme_fg_color_breeze #c5dce3;
+@define-color theme_fg_color_breeze #cae1e8;
 /*
 text color for entries, views and content in general */
-@define-color theme_text_color_breeze #c5dce3;
+@define-color theme_text_color_breeze #cae1e8;
 /*
 widget base background color */
 @define-color theme_bg_color_breeze #001621;
@@ -24,7 +24,7 @@ base background color of selections */
 @define-color theme_selected_bg_color_breeze #0071a1;
 /*
 text/foreground color of selections */
-@define-color theme_selected_fg_color_breeze #c5dce3;
+@define-color theme_selected_fg_color_breeze #cae1e8;
 /*
 decoration color of views */
 @define-color theme_view_active_decoration_color_breeze #0071a1;
@@ -48,10 +48,10 @@ insensitive selected text widgets and the like base background color */
 @define-color insensitive_selected_fg_color_breeze rgba(216, 218, 221, 0.35);
 /*
 widget text/foreground color on backdrop windows */
-@define-color theme_unfocused_fg_color_breeze #c5dce3;
+@define-color theme_unfocused_fg_color_breeze #cae1e8;
 /*
 text color for entries, views and content in general on backdrop windows */
-@define-color theme_unfocused_text_color_breeze #c5dce3;
+@define-color theme_unfocused_text_color_breeze #cae1e8;
 /*
 widget base background color on backdrop windows */
 @define-color theme_unfocused_bg_color_breeze #001621;
@@ -66,7 +66,7 @@ base background color of selections on backdrop windows */
 @define-color theme_unfocused_selected_bg_color_breeze rgba(0, 113, 161, 0.5);
 /*
 text/foreground color of selections on backdrop windows */
-@define-color theme_unfocused_selected_fg_color_breeze #c5dce3;
+@define-color theme_unfocused_selected_fg_color_breeze #cae1e8;
 /*
 base background color of insensitive selections on backdrop windows */
 @define-color insensitive_unfocused_selected_bg_color_breeze rgba(0, 113, 161, 0.35);
@@ -105,8 +105,8 @@ widgets main borders color insensitive backdrop */
 @define-color theme_button_background_normal_breeze #001621;
 @define-color theme_button_decoration_hover_breeze  #0071a1;
 @define-color theme_button_decoration_focus_breeze  #0071a1;
-@define-color theme_button_foreground_normal_breeze #c5dce3;
-@define-color theme_button_foreground_active_breeze #c5dce3;
+@define-color theme_button_foreground_normal_breeze #cae1e8;
+@define-color theme_button_foreground_active_breeze #cae1e8;
 @define-color theme_button_background_insensitive_breeze        #2d3136;
 @define-color theme_button_decoration_hover_insensitive_breeze  rgba(0, 113, 161, 0.35);
 @define-color theme_button_decoration_focus_insensitive_breeze  rgba(0, 113, 161, 0.35);
@@ -115,8 +115,8 @@ widgets main borders color insensitive backdrop */
 @define-color theme_button_background_backdrop_breeze        #001621;
 @define-color theme_button_decoration_hover_backdrop_breeze  #0071a1;
 @define-color theme_button_decoration_focus_backdrop_breeze  #0071a1;
-@define-color theme_button_foreground_backdrop_breeze        #c5dce3;
-@define-color theme_button_foreground_active_backdrop_breeze #c5dce3;
+@define-color theme_button_foreground_backdrop_breeze        #cae1e8;
+@define-color theme_button_foreground_active_backdrop_breeze #cae1e8;
 @define-color theme_button_background_backdrop_insensitive_breeze        #2d3136;
 @define-color theme_button_decoration_hover_backdrop_insensitive_breeze  rgba(0, 113, 161, 0.35);
 @define-color theme_button_decoration_focus_backdrop_insensitive_breeze  rgba(0, 113, 161, 0.35);
@@ -144,7 +144,7 @@ these are pretty self explicative */
 *
 */
 @define-color theme_titlebar_background_breeze          #001621;
-@define-color theme_titlebar_foreground_breeze          #c5dce3;
+@define-color theme_titlebar_foreground_breeze          #cae1e8;
 @define-color theme_titlebar_background_light_breeze    #001621;
 @define-color theme_titlebar_foreground_backdrop_breeze #7f8c8d;
 @define-color theme_titlebar_background_backdrop_breeze #001621;
@@ -153,7 +153,7 @@ these are pretty self explicative */
 /*
 * Tooltips
 */
-@define-color tooltip_text_breeze #c5dce3;
+@define-color tooltip_text_breeze #cae1e8;
 @define-color tooltip_background_breeze #001621;
 @define-color tooltip_border_breeze #003049;
 /*
